# aggregator

./: .env.local  .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml
aggrivate/: aggrivate.js  jest.config.js  package-lock.json  package.json  tsconfig.json
aggrivate/src/: aggrivate.ts
aggrivate/test/: aggrivate.test.js  initdb.sql  test.conf
aggrivate/test/helpers/: configHelper.js  dbHelper.js  processHelper.js  serverHelper.js
etl/: .gitignore  Makefile  README.md  aggregator.conf  aggregator.logging.conf  alembic.ini  pyproject.toml
etl/alembic/: env.py  script.py.mako
etl/alembic/versions/: 7f3204996d57_base.py  7f3204996d57_downgrade.sql  7f3204996d57_upgrade.sql
etl/data/: .gitignore  feeds.json
etl/docker/: docker-compose.yaml
etl/docker/aggregator/: Dockerfile
etl/docker/aggregator/secrets/: podcastindex_blockstorage.json  podcastindex_bus.json  podcastindex_database.json
etl/docker/blockstorage/: Dockerfile
etl/docker/bus/: Dockerfile
etl/docker/database/: Dockerfile
etl/docker/db/: Dockerfile
etl/secrets/: podcastindex_blockstorage.json.sample  podcastindex_bus.json.sample  podcastindex_database.json.sample
etl/src/: bus.py  config.py  feeder.py  feedreader.py  model.py  repository.py  run.py
etl/src/persistence/: blockstorage.py  db.py  postgres.py  repository.py
etl/src/persistence/migrations/: ops.py
etl/src/tasks/: base.py  drop_db.py  ensure_db.py  import_feeds.py  run_aggregator.py  run_scheduler.py  run_worker.py
partytime/: package.json  partytime.js
partytime/src/: partytime.ts
(+1 files in other folders)
