[tool.poetry]
name = "aggregator-etl"
version = "0.0.1"
description = ""
authors = ["sarastinishi <sarasti.nishi@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.6.1"
colorlog = "4.2.1"
feedparser = "6.0.1"
requests = "2.24.0"
pyhocon = "0.3.55"
flake8 = "3.8.3"
SQLAlchemy = "1.3.19"
pandas = "1.1.2"
alembic = "1.4.3"
psycopg2-binary = "2.8.6"
minio = "6.0.0"
dill = "0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
